--- a/assets/css/admin-users.scss
+++ b/assets/css/admin-users.scss
@@ -21,9 +21,7 @@
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
 
-    border-color: black;
-    border: 1px;
-    border-style: solid;
+    border: 1px solid black;
     border-radius: 5px;
     background-color: white;
     visibility: hidden;
